fix: fixed logo link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <p class="cheese_type">КРЕМЧИЗ</p> 
                         <p class="flour">тар-тар</p>
                     </a>
-                    <img class="brand" src="/assets/bonfesto_копия_2.png" alt="">
+                    <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
                      <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
                 </div>
 
@@ -55,7 +55,7 @@
                         <p class="cheese_type">КРЕМЧИЗ</p> 
                         <p class="flour">неаполитанский</p>
                      </a>
-                     <img class="brand" src="/assets/bonfesto_копия_2.png" alt="">
+                     <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
                      <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
                 </div>
 
@@ -68,7 +68,7 @@
                         <p class="cheese_type">КРЕМЧИЗ</p> 
                         <p class="flour">неаполитанский</p>
                      </a>
-                     <img class="brand" src="/assets/bonfesto_копия_2.png" alt="">
+                     <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
                      <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
                 </div>
 
@@ -81,7 +81,7 @@
                         <p class="cheese_type">КРЕМЧИЗ</p> 
                         <p class="flour">тар-тар</p>
                      </a>
-                     <img class="brand" src="/assets/bonfesto_копия_2.png" alt="">
+                     <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
                      <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
                 </div>
             </main>
