fix: fixed sizes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <p class="cheese_type">КРЕМЧИЗ</p> 
                         <p class="flour">хрен</p>
                      </a>
-                     <img class="brand" src="/assets/bonfesto_копия_2.png" alt="">
+                     <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
                      <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
                 </div>
 
