fix: fixed text align

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p class="flour">хрен</p>
                      </a>
                      <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
-                     <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
+                     <p class="description">Хорош для бутербродов с рыбой или мясом. Можно добавлять в салаты для пикантного вкуса.</p>
                 </div>
 
 
@@ -56,7 +56,7 @@
                         <p class="flour">неаполитанский</p>
                      </a>
                      <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
-                     <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
+                     <p class="description">Идеален для курицы, отлично сочетается с говядиной в блюдах средиземноморской кухни. </p>
                 </div>
 
 
@@ -69,7 +69,8 @@
                         <p class="flour">неаполитанский</p>
                      </a>
                      <img class="brand" src="./assets/bonfesto_копия_2.png" alt="">
-                     <p class="description">Прекрасно заменяет классический французский соус из желтка, растительного масла и зеленого лука.</p>
+                     <p class="description">Идеален для курицы, отлично сочетается 
+                        с говядиной в блюдах средиземноморской кухни. </p>
                 </div>
 
 
